resolve avatar block issue when link to user profile is enabled and alignment applied.

--- a/packages/block-library/src/avatar/editor.scss
+++ b/packages/block-library/src/avatar/editor.scss
@@ -2,7 +2,11 @@
 	width: 100%;
 }
 
-.wp-block-avatar.aligncenter {
+.wp-block-avatar.aligncenter,
+.wp-block[data-align="center"] .wp-block-avatar__link > .wp-block-avatar,
+.wp-block[data-align="center"] > .wp-block-avatar {
+	text-align: center;
+
 	.components-resizable-box__container {
 		margin: 0 auto;
 	}
